fix missing scrollbar issue, hide content on small screen sizes

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,10 @@ body {
   overflow-y: scroll !important;
 }
 
+html {
+  background-color: #5d5f60;
+}
+
 .container.content {
   width: 920px;
 }
@@ -40,10 +44,6 @@ p {
   overflow: hidden;
   width: 320px;
   text-overflow: ellipsis;
-}
-
-#footer {
-  background-color: #31363b !important;
 }
 
 .form-control.footer {
@@ -75,6 +75,14 @@ p {
 
 .fixed-bottom.nav-item {
   font-size: 24px;
+}
+
+#footer {
+  background-color: #31363b !important;
+}
+
+.footer-menu-list {
+  background-color: #5d5f60 !important;
 }
 
 .fixed-bottom {
@@ -153,12 +161,4 @@ p {
 
 .dropdown-toggle::after {
   display: none;
-}
-
-@media (max-width: 740px) {
-  html,
-  body,
-  .container.content {
-    height: 100vh;
-  }
 }
